--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ body{
 }
 
 .language{
+    position: fixed;
+    right: 6rem;
     padding-left: 15rem;
     padding-top: 1.5rem;
 }
@@ -24,16 +26,55 @@ body{
     padding: 0.25rem;
 }
 
+.hamburger-menu{
+    width:35px;
+    height:30px;
+    position:fixed;
+    right:2rem;
+    top:1rem;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
 
+.line{
+    width:100%;
+    height:3px;
+    background-color: black;
+    transition: all 0.8s;
+  }
 
+.change .line-1{
+    transform: rotateZ(-405deg) translate(-8px, 6px);
+}
+
+.change .line-3{
+    transform: rotateZ(405deg) translate(-8px, -6px);
+}
+
+.change .line-2{
+    opacity: 0;
+}
+
+.navbar{
+    position: fixed;
+    right: -600px;
+}
 
 nav ul{
+    width: 600px;
     margin-top: 0;
     margin-bottom: 0;
     list-style:none;
     text-align: center;
-    margin-left: -2.75rem;
+    
+
   
+}
+
+.change{
+    right: 0;
 }
 
 nav a{
