--- a/css/style.css
+++ b/css/style.css
@@ -195,8 +195,37 @@ nav a{
     font-weight: bold;
 }
 
+.work{
+    background-color: #D1EFF7;
+}
 
+.work h1{
+    padding-top: 3rem;
+    font-size: 40px;
+    text-align: center;
+}
 
+.work p{
+    font-size: 25px;
+    text-align: center;
+    padding-top: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+.container2{
+    display: grid;
+    grid-gap: 1rem;
+    padding: 3rem;
+    text-align: center;
+    grid-template-columns: 1fr;
+}
+
+.container2 img{
+    object-fit:cover;
+    width:100%;
+    height:100;
+}
 
 
 
