--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,111 @@
+body{
+    margin:0;
+}
+
+
+.container1{
+    display: flex;
+}
+
+.container1 h2{
+    position: absolute;
+    left: 2rem;
+}   
+
+.language{
+    position: absolute;
+    right: 2rem;
+    top: 1.5rem;
+   
+}
+
+.navbar{
+    position: absolute;
+    top:-1.5rem;
+    right: 15rem;
+}
+
+.navbar ul{
+    display: flex;
+    flex-direction: row;
+    list-style:none;
+}
+
+.navbar li{
+    padding: 2rem;
+}
+
+.navbar a{
+    text-decoration: none;
+    list-style:none;
+    color:black;
+}
+    
+
+
+.language a{
+    text-decoration: none;
+    list-style:none;
+    color:black;
+    padding: 0.25rem;
+}
+
+.presentation h1{
+    padding-top: 6rem;
+    font-size: 50px;
+    text-align: center;
+  }
+
+  .presentation p{
+    font-size: 25px;
+    text-align: center;
+    padding-top: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .social{
+    display: flex;
+    position: fixed;
+    top: 0.75rem;
+    right: 11rem;
+ }
+ 
+ .fa {
+     padding: 8px;
+     font-size: 5px;
+     width: 520px;
+     text-align: center;
+     text-decoration: none;
+     margin: 5px 2px;
+     
+ }
+ 
+ .fa:hover {
+     opacity: 0.7;
+ }
+ 
+ .fa-facebook {
+     width: 15px;
+     background: #3B5998;
+     color: white;
+     border-radius: 50%;
+     
+ }
+ 
+ .fa-instagram {
+     width: 15px;
+     background: #125688;
+     color: white;
+     border-radius: 50%;
+ }
+ 
+ .fa-linkedin {
+     width: 15px;
+     background: #007bb5;
+     color: white;
+     border-radius: 50%;
+   }
 
 
   @media all and (max-width: 600px){
@@ -26,7 +134,7 @@ body{
     position: fixed;
     right: 6rem;
     padding-left: 15rem;
-    padding-top: 1.5rem;
+    padding-top: -1rem;
 }
 
 .language a{
