--- a/css/style.css
+++ b/css/style.css
@@ -1,146 +1,76 @@
-
-
-  @media all and (max-width: 600px){
-
 body{
     margin:0;
 }
 
-    /* flexbox */
 
 .container1{
-    position: fixed;
-    width: 100%;
-    top:0;
-    background-color: #D1EFF7;
-    padding-left: 1rem;
     display: flex;
-    padding-bottom: 4rem;
+    text-align: center;
 }
 
 .container1 h2{
     position: fixed;
-}
+    left: 2rem;
+}   
 
 .language{
     position: fixed;
-    right: 6rem;
-    padding-left: 15rem;
-    padding-top: 1.5rem;
+    right: 2rem;
+    top: 1.5rem;
+    display: flex;
+    
+   
 }
 
 .language a{
-    text-decoration: none;
+    padding-left: 1rem;
     color:black;
-    padding: 0.25rem;
-}
-
-.hamburger-menu{
-    width:35px;
-    height:30px;
-    position:fixed;
-    right:2rem;
-    top:1rem;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-  }
-
-.line{
-    width:100%;
-    height:3px;
-    background-color: black;
-    transition: all 0.8s;
-  }
-
-.change .line-1{
-    transform: rotateZ(-405deg) translate(-8px, 6px);
-}
-
-.change .line-3{
-    transform: rotateZ(405deg) translate(-8px, -6px);
-}
-
-.change .line-2{
-    opacity: 0;
+    text-decoration: none;
+   
 }
 
 .navbar{
     position: fixed;
-    right: -700px;
-    top:4rem;
+    top:1.5rem;
+    right: 15rem;
 }
 
-nav ul{
-    background-color: #E9E9E9;
-    width: 600px;
-    margin-top: 0;
-    margin-bottom: 0;
+.navbar ul{
+    display: flex;
     list-style:none;
-    text-align: center;
+    margin: 0;
+    padding-left: 3rem;
+    
+    
 }
 
-.change{
-    right: 0;
+.navbar li{
+    font-size: 17px;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
-nav a{
-    padding: 1rem;
-    display:block;
+.navbar a{
+    color:black;
+    text-decoration: none;
+}
+    
+
+.grid1{
+    padding-top: 6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem;
+}
+
+.presentation{
+    margin-top: 2rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
     border: solid black;
-    text-decoration: none;
-    color: black;
 }
 
-.social{
-   display: flex;
-   position: fixed;
-   top: 0.75rem;
-   right: 11rem;
-}
-
-.fa {
-    padding: 8px;
-    font-size: 5px;
-    width: 520px;
-    text-align: center;
-    text-decoration: none;
-    margin: 5px 2px;
-    
-}
-
-.fa:hover {
-    opacity: 0.7;
-}
-
-.fa-facebook {
-    width: 15px;
-    background: #3B5998;
-    color: white;
-    border-radius: 50%;
-    
-}
-
-.fa-instagram {
-    width: 15px;
-    background: #125688;
-    color: white;
-    border-radius: 50%;
-}
-
-.fa-linkedin {
-    width: 15px;
-    background: #007bb5;
-    color: white;
-    border-radius: 50%;
-  }
-
-  .presentation {
-    
-  }
-
-  .presentation h1{
+.presentation h1{
     padding-top: 6rem;
     font-size: 50px;
     text-align: center;
@@ -154,27 +84,62 @@ nav a{
     padding-right: 3rem;
   }
 
-
-  .contbutton{
-    display: flex;
+  .social{
     justify-content: center;
-    align-items: center;
-    
-    
-  }
+    display: flex;
+    top: 0.75rem;
+    right: 11rem;
+ }
+ 
+ .fa {
+     padding: 8px;
+     font-size: 5px;
+     width: 520px;
+     text-align: center;
+     text-decoration: none;
+     margin: 5px 2px;
+     
+ }
+ 
+ .fa:hover {
+     opacity: 0.7;
+ }
+ 
+ .fa-facebook {
+     width: 15px;
+     background: #3B5998;
+     color: white;
+     border-radius: 50%;
+     
+ }
+ 
+ .fa-instagram {
+     width: 15px;
+     background: #125688;
+     color: white;
+     border-radius: 50%;
+ }
+ 
+ .fa-linkedin {
+     width: 15px;
+     background: #007bb5;
+     color: white;
+     border-radius: 50%;
+   }
 
-  .button{
+.button{
     background-color: #4FB2D4;
     font-size: 15px;
     display: inline-block;
-    position: relative;
-    top:0rem;
     color:white;
     text-decoration: none;
     padding: 1rem 2rem;
     border: white 1px solid;
-    margin-top: 40px;
-    align-items: center;
+    margin: 0 auto;
+    
+  
+    border-radius: 5% 5% 5% 5%;
+    letter-spacing: 2px;
     
     animation-name: button;
     animation-duration: 2s;
@@ -195,8 +160,89 @@ nav a{
     font-weight: bold;
 }
 
+.preimg{
+    margin-top: 2rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: solid black;
+    display: flex;
+    justify-content: center;
+}
+
+section{
+    border: solid black;
+    margin-top: 0;
+    background-color: #E9E9E9;
+}
+
 .work{
-    background-color: #D1EFF7;
+    display: block;
+    margin: 0;
+    padding-top: 0;
+}
+
+.container2{
+    text-align: center;
+    margin: 2rem;
+    grid-gap: 2rem;
+    padding-bottom: 3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 200px 200px 100px 100px 100px 300px;
+
+}
+
+.a{
+    grid-column: 1/3;
+    grid-row: 1/4;
+    padding-bottom: 2rem;
+}
+
+.b{
+    grid-column: 3/7;
+    grid-row: 1/3;
+    padding-bottom: 2rem;
+}
+
+.c{
+    grid-column: 3/5;
+    grid-row: 3/6;
+    padding-bottom: 2rem;
+}
+
+.d{
+    grid-column: 5/7;
+    grid-row: 3/5;
+    padding-bottom: 2rem;
+}
+
+.e{
+    grid-column: 5/7;
+    grid-row: 5/7;
+    padding-bottom: 2rem;
+}
+
+.f{
+    grid-column: 1/3;
+    grid-row: 4/7;
+    padding-bottom: 2rem;
+}
+
+.g{
+    grid-column: 3/5;
+    grid-row: 6/7;
+    padding-bottom: 2rem;
+}
+
+
+.container2 img{
+    width: 100%;
+    height: 100%;
+}
+
+.work{
+    background-color: #E9E9E9;
+    border: solid #E9E9E9;
 }
 
 .work h1{
@@ -209,24 +255,377 @@ nav a{
     font-size: 25px;
     text-align: center;
     padding-top: 1rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 10rem;
+    padding-right: 10rem;
 }
 
-.container2{
-    display: grid;
-    grid-gap: 1rem;
-    padding: 3rem;
+footer{
+    padding-top: 1rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border-color: #4FB2D4;
     text-align: center;
-    grid-template-columns: 1fr;
-}
-
-.container2 img{
-    object-fit:cover;
-    width:100%;
-    height:100;
+    background-color: #4FB2D4;
+    color: white;
+    font-weight: bold;
 }
 
 
+.ulfooter{
+    display: flex;
+    flex-direction: row;
+    list-style:none;
+    justify-content: center;
+}
 
-  }
+.ulfooter li{
+    text-align: center;
+    padding: 1rem;
+    
+}
+
+.ulfooter a{
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    
+}
+
+@media all and (max-width: 600px){
+
+    body{
+        margin:0;
+    }
+
+        /* flexbox */
+
+    .container1{
+        position: fixed;
+        width: 100%;
+        top:0;
+        background-color: #D1EFF7;
+        padding-left: 1rem;
+        display: flex;
+        padding-bottom: 4rem;
+    }
+
+    .container1 h2{
+        position: fixed;
+    }
+
+    .language{
+        position: fixed;
+        right: 6rem;
+        padding-left: 15rem;
+        padding-top: 0rem;
+    }
+
+    .language a{
+        text-decoration: none;
+        color:black;
+        padding: 0.25rem;
+    }
+
+    .hamburger-menu{
+        width:35px;
+        height:30px;
+        position:fixed;
+        right:2rem;
+        top:1rem;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .line{
+        width:100%;
+        height:3px;
+        background-color: black;
+        transition: all 0.8s;
+    }
+
+    .change .line-1{
+        transform: rotateZ(-405deg) translate(-8px, 6px);
+    }
+
+    .change .line-3{
+        transform: rotateZ(405deg) translate(-8px, -6px);
+    }
+
+    .change .line-2{
+        opacity: 0;
+    }
+
+    .navbar{
+        position: fixed;
+        right: -700px;
+        top:4rem;
+        border: solid black;
+    }
+
+    .navbar ul{
+        display: flex;
+        flex-direction: column;
+        background-color: #E9E9E9;
+        width: 600px;
+        margin: 0;
+        padding-right: 0;
+        list-style:none;
+        text-align: center;
+    }
+
+    .navbar li{
+        font-size: 13px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+
+    .change{
+        right: 0;
+    }
+
+    .navbar a{
+        padding: 1rem;
+        display:block;
+        border: solid black;
+        text-decoration: none;
+        color: black;
+    }
+
+    .social{
+        display: flex;
+        position: fixed;
+        top: 0.75rem;
+        right: 11rem;
+    }
+
+    .fa {
+        padding: 8px;
+        font-size: 5px;
+        width: 520px;
+        text-align: center;
+        text-decoration: none;
+        margin: 5px 2px;
+        
+    }
+
+    .fa:hover {
+        opacity: 0.7;
+    }
+
+    .fa-facebook {
+        width: 15px;
+        background: #3B5998;
+        color: white;
+        border-radius: 50%;
+        
+    }
+
+    .fa-instagram {
+        width: 15px;
+        background: #125688;
+        color: white;
+        border-radius: 50%;
+    }
+
+    .fa-linkedin {
+        width: 15px;
+        background: #007bb5;
+        color: white;
+        border-radius: 50%;
+    }
+
+    .grid1{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        padding: 0;
+        margin: 0;
+        
+    }
+
+    .presentation {
+        margin: 0;
+        padding: 0;
+    }
+
+    .presentation h1{
+        padding-top: 6rem;
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .presentation p{
+        font-size: 25px;
+        text-align: center;
+        padding-top: 1rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .presentation img{
+        
+        object-fit:cover;
+        width:100%;
+        height:100;
+    }
+
+
+    .contbutton{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-bottom: 3rem;
+        
+        
+    }
+
+    .button{
+        background-color: #4FB2D4;
+        font-size: 25px;
+        
+        color:white;
+        text-decoration: none;
+        padding: 1rem 2rem;
+        border: white 1px solid;
+        margin-top: 40px;
+        align-items: center;
+        border-radius: 5% 5% 5% 5%;
+        letter-spacing: 2px;
+        
+        animation-name: button;
+        animation-duration: 2s;
+        animation-delay: 2s;
+        animation-fill-mode: backwards;
+
+        transition-property: button;
+        transition-duration: 2s;
+        transition-timing-function: ease-in-out;
+
+    }
+
+    .button:hover{
+        transform: scale(1);
+        border-radius: 10% 10% 10% 10%;
+        background: #4FB2D4;
+        color: white;
+        font-weight: bold;
+    }
+
+    .work{
+        background-color: #E9E9E9;
+        border: solid #E9E9E9;
+
+    }
+
+    .work h1{
+        padding-top: 3rem;
+        font-size: 40px;
+        text-align: center;
+    }
+
+    .work p{
+        font-size: 25px;
+        text-align: center;
+        padding-top: 1rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .container2{
+        text-align: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .a {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        padding-bottom: 2rem;
+    }
+
+    .b{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        padding-bottom: 2rem;
+    }
+
+    .c{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        padding-bottom: 2rem;
+    }
+    
+    .d{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        padding-bottom: 2rem;
+    }
+    
+    .e{
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding-bottom: 2rem;
+    }
+    
+    .f{
+        grid-column: 2/3;
+        grid-row: 3/4;
+        padding-bottom: 2rem;
+    }
+    
+    .g{
+        grid-column: 1/3;
+        grid-row: 4/5;
+        height: 300px;
+        padding-bottom: 2rem;
+    }
+
+    .container2 img{
+        object-fit:cover;
+        width:100%;
+        height:100;
+    }
+
+    footer{
+        padding-top: 1rem;
+        text-align: center;
+        background-color: #4FB2D4;
+    }
+
+    footer{
+        color: white;
+        font-weight: bold;
+    }
+
+    .navcontainer{
+        
+
+    }
+
+    .ulfooter{
+        display: flex;
+        flex-direction: row;
+        list-style:none;
+    }
+
+    .ulfooter li{
+        text-align: center;
+        padding: 1rem;
+        
+    }
+
+    .ulfooter a{
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+        
+    }
+
+
+
+
+}
