--- a/css/style2.css
+++ b/css/style2.css
@@ -54,37 +54,166 @@ body{
     color:black;
     text-decoration: none;
 }
-    
 
-.grid1{
-    padding-top: 6rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 3rem;
-}
 
-.presentation{
-    margin-top: 2rem;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    border: solid black;
-}
-
-.presentation h1{
-    padding-top: 6rem;
+h1{
+    line-height: 100px;
     font-size: 50px;
-    text-align: center;
-  }
+}
 
-  .presentation p{
+.name{
     font-size: 25px;
-    text-align: center;
-    padding-top: 1rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
+}
 
-  .social{
+.team{
+    width: 100%;
+    float: left;
+    margin: 15px;
+    color: black;
+}
+
+.team img{
+    width: 450px;
+    height: 450px;
+    float: left;
+    margin: 40px 20px 30px 0;
+    border: 5px solid #4FB2D4;
+    border-radius: 50%;
+    clip-path: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+}
+
+.aboutme{
+    margin-top: 3rem;
+    padding-left: 12rem;
+    border: solid black;
+    display: block;
+}
+
+.aboutme p{
+    padding-right: 12rem;
+}
+
+
+
+p{
+    line-height: 20px;
+}
+
+.button{
+    font-size: 15px;
+    display: inline-block;
+    position: relative;
+    left: 20rem;
+    top:0rem;
+    color: white;
+    text-decoration: none;
+    padding: 1rem 2rem;
+    background-color: #4FB2D4;
+    border: #4FB2D4 1px solid;
+    margin-top: 40px;
+   
+
+    animation-name: button;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-fill-mode: backwards;
+
+    transition-property: button;
+    transition-duration: 2s;
+    transition-timing-function: ease-in-out;
+
+}
+
+.button:hover{
+    transform: scale(1.10);
+    border-radius: 20% 20% 20% 20%;
+    border: white 2px solid;
+    background: #4FB2D4;
+    color: white;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.experience h2{
+    height: 3rem;
+    text-align: center;
+}
+
+
+.experience h3{
+    text-align: center;
+    padding-left: 2rem;
+}
+
+.experience ul{
+    text-align: center;
+    border: solid black;
+    list-style:none;
+}
+
+.experience{
+    display: block;
+    background-color: #D1EFF7;
+    border: solid black;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 4rem 1fr;
+}
+
+.skillh2{
+    border: solid black;
+    text-align: center;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    margin: 0;
+    padding: 0;
+    height: 4rem;
+}
+
+
+.skills{
+    padding-right: 3rem;
+    height: 3rem;
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.skills3{
+    padding-right: 3rem;
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.skills2{
+    padding-right: 3rem;
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+
+
+
+
+
+
+
+
+
+
+.social{
+    opacity: 0;
     justify-content: center;
     display: flex;
     top: 0.75rem;
@@ -126,138 +255,6 @@ body{
      color: white;
      border-radius: 50%;
    }
-
-.button{
-    background-color: #4FB2D4;
-    font-size: 25px;
-    display: inline-block;
-    color:white;
-    text-decoration: none;
-    padding: 1rem 2rem;
-    border: white 1px solid;
-    margin: 0 auto;
-    
-  
-    border-radius: 5% 5% 5% 5%;
-    letter-spacing: 2px;
-    
-    animation-name: button;
-    animation-duration: 2s;
-    animation-delay: 2s;
-    animation-fill-mode: backwards;
-
-    transition-property: button;
-    transition-duration: 2s;
-    transition-timing-function: ease-in-out;
-
-}
-
-.button:hover{
-    transform: scale(1);
-    border-radius: 10% 10% 10% 10%;
-    background: #4FB2D4;
-    color: white;
-    font-weight: bold;
-}
-
-.preimg{
-    margin-top: 2rem;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    border: solid black;
-    display: flex;
-    justify-content: center;
-}
-
-section{
-    border: solid black;
-    margin-top: 0;
-    background-color: #E9E9E9;
-}
-
-.work{
-    display: block;
-    margin: 0;
-    padding-top: 0;
-}
-
-.container2{
-    text-align: center;
-    margin: 2rem;
-    grid-gap: 2rem;
-    padding-bottom: 3rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 200px 200px 100px 100px 100px 300px;
-
-}
-
-.a{
-    grid-column: 1/3;
-    grid-row: 1/4;
-    padding-bottom: 2rem;
-}
-
-.b{
-    grid-column: 3/7;
-    grid-row: 1/3;
-    padding-bottom: 2rem;
-}
-
-.c{
-    grid-column: 3/5;
-    grid-row: 3/6;
-    padding-bottom: 2rem;
-}
-
-.d{
-    grid-column: 5/7;
-    grid-row: 3/5;
-    padding-bottom: 2rem;
-}
-
-.e{
-    grid-column: 5/7;
-    grid-row: 5/7;
-    padding-bottom: 2rem;
-}
-
-.f{
-    grid-column: 1/3;
-    grid-row: 4/7;
-    padding-bottom: 2rem;
-}
-
-.g{
-    grid-column: 3/5;
-    grid-row: 6/7;
-    padding-bottom: 2rem;
-}
-
-
-.container2 img{
-    width: 100%;
-    height: 100%;
-}
-
-.work{
-    background-color: #E9E9E9;
-    border: solid #E9E9E9;
-}
-
-.work h1{
-    padding-top: 3rem;
-    font-size: 40px;
-    text-align: center;
-}
-
-.work p{
-    font-size: 25px;
-    text-align: center;
-    padding-top: 1rem;
-    padding-left: 10rem;
-    padding-right: 10rem;
-}
 
 footer{
     padding-top: 1rem;
@@ -395,6 +392,7 @@ footer{
     }
 
     .social{
+        opacity: 100;
         display: flex;
         position: fixed;
         top: 0.75rem;
@@ -437,58 +435,66 @@ footer{
         border-radius: 50%;
     }
 
-    .grid1{
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        padding: 0;
-        margin: 0;
-        
-    }
-
-    .presentation {
-        margin: 0;
-        padding: 0;
-    }
-
-    .presentation h1{
-        padding-top: 6rem;
+    h1{
+        line-height: 100px;
         font-size: 50px;
-        text-align: center;
     }
-
-    .presentation p{
+    
+    .name{
         font-size: 25px;
-        text-align: center;
-        padding-top: 1rem;
-        padding-left: 3rem;
-        padding-right: 3rem;
     }
 
-    .presentation img{
-
-        object-fit:cover;
-        width:100%;
-        height:100;
+    .aboutme{
+        width: 600px;
+        margin: 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 
+    .aboutme p{
+        margin: 0;
+        padding: 0;
+    }
 
-    .contbutton{
+    .team{
+        margin: 0;
+        border: solid black;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: center;
-        padding-bottom: 3rem;
+        letter-spacing: 1px;
+        padding: 2.5rem;
+        color: black;
+        
+    
+    }
+    
+    .team img{
+        width: 100%;
+        padding: 2rem;
+        border: 5px solid #fff;
         
         
+    }
+
+    .team h1{
+        text-align: center;
+        font-size: 40px;
+    }
+    
+    p{
+        line-height: 25px;
     }
 
     .button{
+        width: 100px;
         background-color: #4FB2D4;
         font-size: 25px;
+        position: relative;
+        left: 10rem;
         
         color:white;
         text-decoration: none;
-        padding: 1rem 2rem;
         border: white 1px solid;
         margin-top: 40px;
         align-items: center;
@@ -514,81 +520,91 @@ footer{
         font-weight: bold;
     }
 
-    .work{
-        background-color: #E9E9E9;
-        border: solid #E9E9E9;
-
-    }
-
-    .work h1{
-        padding-top: 3rem;
-        font-size: 40px;
+    .experience h2{
+        height: 3rem;
         text-align: center;
     }
 
-    .work p{
-        font-size: 25px;
+
+    .experience h3{
         text-align: center;
-        padding-top: 1rem;
-        padding-left: 3rem;
-        padding-right: 3rem;
+        padding-left: 2rem;
     }
 
-    .container2{
+    .experience ul{
         text-align: center;
-        display: grid;
+        border: solid black;
+        list-style:none;
+    }
+
+    .experience{
+        background-color: #D1EFF7;
+        border: solid black;
+        display:grid;
         grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 4rem 1fr;
     }
 
-    .a {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        padding-bottom: 2rem;
-    }
-
-    .b{
-        grid-column: 2/3;
-        grid-row: 1/2;
-        padding-bottom: 2rem;
-    }
-
-    .c{
-        grid-column: 1/2;
-        grid-row: 2/3;
-        padding-bottom: 2rem;
-    }
-    
-    .d{
-        grid-column: 2/3;
-        grid-row: 2/3;
-        padding-bottom: 2rem;
-    }
-    
-    .e{
-        grid-column: 1/2;
-        grid-row: 3/4;
-        padding-bottom: 2rem;
-    }
-    
-    .f{
-        grid-column: 2/3;
-        grid-row: 3/4;
-        padding-bottom: 2rem;
-    }
-    
-    .g{
+    .skillh2{
+        border: solid black;
+        text-align: center;
         grid-column: 1/3;
-        grid-row: 4/5;
-        height: 300px;
-        padding-bottom: 2rem;
+        grid-row: 1/2;
+        margin: 0;
+        padding: 0;
+        height: 4rem;
+    }
+    
+
+    .skills{
+        padding-right: 3rem;
+        height: 3rem;
+        grid-column: 1/2;
+        grid-row: 2/3;
     }
 
-    .container2 img{
-        object-fit:cover;
-        width:100%;
-        height:100;
+    .skills3{
+        padding-right: 3rem;
+        grid-column: 2/3;
+        grid-row: 2/3;
     }
+    
+    .skills2{
+        padding-right: 3rem;
+        grid-column: 1/3;
+        grid-row: 3/4;
+    }
+
+
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     footer{
         padding-top: 1rem;
@@ -624,8 +640,6 @@ footer{
         font-weight: bold;
         
     }
-
-
 
 
 }
