--- a/css/style4.css
+++ b/css/style4.css
@@ -55,26 +55,41 @@ body{
     text-decoration: none;
 }
 
+.grid1{
+    padding-top: 6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem;
+}
 
+.presentation{
+    margin-top: 2rem;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: solid black;
+}
 
+.presentation h1{
+    padding-top: 6rem;
+    font-size: 50px;
+    text-align: center;
+  }
 
+  .presentation h2{
+    text-align: center;
+  }
 
+  .presentation p{
+    font-size: 25px;
+    text-align: center;
+    padding-top: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  .contact1{
+      margin-top:5rem;
+  }
 
 
 .social{
@@ -120,6 +135,29 @@ body{
      color: white;
      border-radius: 50%;
    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer{
     padding-top: 1rem;
@@ -301,7 +339,46 @@ footer{
     }
 
 
+    .grid1{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        padding: 0;
+        margin: 0;
+        
+    }
 
+    .presentation {
+        margin: 0;
+        padding: 0;
+    }
+
+    .presentation h1{
+        padding-top: 6rem;
+        font-size: 50px;
+        text-align: center;
+    }
+
+    .presentation h2{
+   
+        text-align: center;
+    }
+
+
+    .presentation p{
+        font-size: 25px;
+        text-align: center;
+        padding-top: 1rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .presentation img{
+
+        object-fit:cover;
+        width:100%;
+        height:100;
+    }
 
 
 
