--- a/css/style2.css
+++ b/css/style2.css
@@ -72,9 +72,13 @@ h1{
     color: black;
 }
 
+.team p{
+    padding-right: 4rem;
+}
+
 .team img{
-    width: 450px;
-    height: 450px;
+    width: 400px;
+    height: 400px;
     float: left;
     margin: 40px 20px 30px 0;
     border: 5px solid #4FB2D4;
@@ -85,20 +89,15 @@ h1{
 
 .aboutme{
     margin-top: 3rem;
-    padding-left: 12rem;
     border: solid black;
     display: block;
-}
-
-.aboutme p{
-    padding-right: 12rem;
+    padding-left: 4rem;
 }
 
 
 
-p{
-    line-height: 20px;
-}
+
+
 
 .button{
     font-size: 15px;
@@ -445,16 +444,16 @@ footer{
     }
 
     .aboutme{
-        width: 600px;
-        margin: 0;
-        padding-left: 0;
-        padding-right: 0;
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-content: center;
+       margin-top: 4rem;
+       padding-left: 0;
+
     }
 
-    .aboutme p{
-        margin: 0;
-        padding: 0;
-    }
+
 
     .team{
         margin: 0;
@@ -462,17 +461,17 @@ footer{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        letter-spacing: 1px;
-        padding: 2.5rem;
         color: black;
         
     
     }
     
     .team img{
-        width: 100%;
-        padding: 2rem;
+        align-content: center;
+        margin-top: 4rem;
+        width: 450px;
         border: 5px solid #fff;
+        margin-top: 3rem;
         
         
     }
@@ -482,8 +481,12 @@ footer{
         font-size: 40px;
     }
     
-    p{
-        line-height: 25px;
+    .team p{
+        padding-left:2rem;
+        padding-right: 1.5rem;
+        line-height: 23px;
+        letter-spacing: 0.5px;
+
     }
 
     .button{
